--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
   color: #353535;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 body {
@@ -35,6 +35,7 @@ a span {
 
 .container {
   overflow: auto;
+  margin-bottom: 30px;
 }
 
 nav {
@@ -43,6 +44,8 @@ nav {
   font-size: 20px;
   box-shadow: 1px 0px 3px #000000;
   background-color: #bdbdbd21;
+  width: 15%;
+  word-wrap: break-word;
 }
 
 nav > div {
