--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,22 @@
   font-size: 18px;
 }
 
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -98,10 +114,6 @@ article {
   text-align: center;
   margin: 2%;
   height: 100vh;
-}
-
-article h1 {
-  font-size: 30px;
 }
 
 footer {
